Prepares release 0.3.2