@@ -5,7 +5,7 @@
 
     <groupId>org.jesperancinha.plugins</groupId>
     <artifactId>omni-coveragereporter-maven-plugin</artifactId>
-    <version>0.3.1</version>
+    <version>0.3.2</version>
     <packaging>maven-plugin</packaging>
 
     <name>Omni Coverage Reporter Maven Plugin</name>
@@ -34,7 +34,7 @@
         <connection>scm:git:git://github.com/JEsperancinhaOrg.git</connection>
         <developerConnection>scm:git:git://github.com/JEsperancinhaOrg.git</developerConnection>
         <url>https://github.com/JEsperancinhaOrg/omni-coveragereporter-maven-plugin</url>
-        <tag>0.3.1</tag>
+        <tag>0.3.2</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
@@ -88,8 +88,8 @@
         <coverage-parser_2.12.version>4.4.2</coverage-parser_2.12.version>
         <codacy-coverage-reporter.version>7.1.0</codacy-coverage-reporter.version>
         <logback-classic.version>1.4.5</logback-classic.version>
-        <omni-coveragereporter-maven-plugin.version>0.3.0</omni-coveragereporter-maven-plugin.version>
-        <omni-coveragereporter-commons.version>0.3.1</omni-coveragereporter-commons.version>
+        <omni-coveragereporter-maven-plugin.version>0.3.1</omni-coveragereporter-maven-plugin.version>
+        <omni-coveragereporter-commons.version>0.3.2</omni-coveragereporter-commons.version>
     </properties>
 
     <dependencies>
@@ -283,6 +283,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
